--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         </section>
     </main>
     <!-- Юредический адресс -->
-    <footer class="footer-adress">
+    <footer class="footer-adress footer-adress__index">
         <div class="container footer-adress__location">
             <div class="footer-adress__block">
                 <div class="footer-adress__adress adress">
