--- a/portfolio.html
+++ b/portfolio.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
     <!-- Шапка сайта -->
     <header class="headers">
-        <div class="novigation container">
+        <div class="novigation containerr">
             <nav class="novigation__nav">
                 <a class="novigation__logo" style="color: black;" href=""><span
                         class="novigation__first-logo">Web</span>Studio</a>
@@ -63,7 +67,7 @@
     <main>
         <!-- Навигация по сайту -->
         <section class="selection selection-navigation">
-            <div class="container">
+            <div class="containerr">
                 <ul class="selection-navigation__list container">
                     <li class="selection-navigation__item">
                         <button class="selection-navigation__botom selection-navigation__botom--color"
@@ -78,7 +82,7 @@
                     <li class="selection-navigation__item"><button class="selection-navigation__botom"
                             type="button">Маркетинг</button></li>
                 </ul>
-                <ul class="kontents container">
+                <ul class="kontents containerr">
                     <li class="kontents__item">
                         <a class="kontents__link" href="">
                             <div class="kontents__cards">
@@ -318,8 +322,8 @@
         </section>
     </main>
     <!-- Юредический адресс -->
-    <footer class="footer-adress">
-        <div class="container footer-adress__location">
+    <footer class="footer-adress footer-adress__portfolio">
+        <div class="containerr footer-adress__location">
             <div class="footer-adress__block">
                 <div class="footer-adress__adress adress">
                     <div class="adress__logo">
