--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                             <img srcset=" 
                             ./img/svg/img/4/4.webp 1x, 
                             ./img/svg/img/4/4@2x.webp 2x, 
-                            ./img/svg/img/4/4@3x.webp 3x" src="./img/svg/img/4/4.jpg" alt="Product Designe"
-                                width="270">
+                            ./img/svg/img/4/4@3x.webp 3x" src="./img/svg/img/4/4.jpg" alt="Product Designe">
                         </picture>
                         <div class="business_card">
                             <h3 class="business_card__text">Игорь Демьяненко</h3>
@@ -240,8 +239,7 @@
                             <img srcset=" 
                             ./img/svg/img/5/5.jpg 1x, 
                             ./img/svg/img/5/5@2x.jpg 2x, 
-                            ./img/svg/img/5/5@3x.jpg 3x" src="./img/svg/img/5/5.jpg" alt="Frontend Developerr"
-                                width="270">
+                            ./img/svg/img/5/5@3x.jpg 3x" src="./img/svg/img/5/5.jpg" alt="Frontend Developerr">
                         </picture>
                         <div class="business_card">
                             <h3 class="business_card__text">Ольга Репина</h3>
@@ -292,7 +290,7 @@
                             <img srcset=" 
                             ./img/svg/img/6/6.jpg 1x, 
                             ./img/svg/img/6/6@2x.jpg 2x, 
-                            ./img/svg/img/6/6@3x.jpg 3x" src="./img/svg/img/6/6.jpg" alt="Marketing" width="270">
+                            ./img/svg/img/6/6@3x.jpg 3x" src="./img/svg/img/6/6.jpg" alt="Marketing">
                         </picture>
                         <div class="business_card">
                             <h3 class="business_card__text">Николай Тарасов</h3>
@@ -343,7 +341,7 @@
                             <img srcset=" 
                             ./img/svg/img/7/7.jpg 1x, 
                             ./img/svg/img/7/7@2x.jpg 2x, 
-                            ./img/svg/img/7/7@3x.jpg 3x" src="./img/svg/img/7/7.jpg" alt="UI Designer" width="270">
+                            ./img/svg/img/7/7@3x.jpg 3x" src="./img/svg/img/7/7.jpg" alt="UI Designer">
                         </picture>
                         <div class="business_card">
                             <h3 class="business_card__text">Михаил Ермаков</h3>
@@ -395,14 +393,14 @@
                     <li class="client__item">
                         <a href="" class="client__link">
                             <svg class="client__icon">
-                                <use href="./img/symbol-defs.svg#icon-Logo"></use>
+                                <use class="client__icon-logo" href="./img/symbol-defs.svg#icon-Logo"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client__item">
-                        <a href="" class="client__link client__link--location">
-                            <svg class="client__icon">
-                                <use href="./img/symbol-defs.svg#icon-Logo-1"></use>
+                        <a href="" class="client__link">
+                            <svg class=" client__icon">
+                                <use class="client__icon-logo" href="./img/symbol-defs2.svg#icon-Logo2"></use>
                             </svg>
                         </a>
                     </li>
